[gd_scene load_steps=8 format=3 uid="uid://dhgqdwpcy37iw"]

[ext_resource type="Script" path="res://scene/ui/main_menu/main_menu.gd" id="1_ay1vl"]
[ext_resource type="Shader" path="res://scene/ui/main_menu/main_menu.gdshader" id="2_lsi7y"]

[sub_resource type="Animation" id="Animation_c48ut"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/FullMenuVBox/SettingsMargin:theme_override_constants/margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-500, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_e358b"]
resource_name = "remove_main_menu"
length = 2.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5, 0.0]
}

[sub_resource type="Animation" id="Animation_26jtx"]
resource_name = "settings_in"
length = 1.5
step = 0.1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/FullMenuVBox/SettingsMargin:theme_override_constants/margin_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-500, -0.25, 0, 0.25, 0, 54, -0.166667, 0, 0.133333, 0, 0, -0.259252, -41, 0, 0),
"times": PackedFloat32Array(0, 0.5, 0.9)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a4f3x"]
_data = {
"RESET": SubResource("Animation_c48ut"),
"remove_main_menu": SubResource("Animation_e358b"),
"settings_in": SubResource("Animation_26jtx")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_titru"]
shader = ExtResource("2_lsi7y")
shader_parameter/strength = 3.0
shader_parameter/lod = 1.5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ay1vl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a4f3x")
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_titru")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -101.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="FullMenuVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SettingsMargin" type="MarginContainer" parent="MarginContainer/FullMenuVBox"]
layout_mode = 2
theme_override_constants/margin_right = -500

[node name="Settings Section" type="VBoxContainer" parent="MarginContainer/FullMenuVBox/SettingsMargin"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="MarginContainer/FullMenuVBox/SettingsMargin/Settings Section"]
layout_mode = 2
text = "This is where settings will live in the future"

[node name="SettingsBackButton" type="Button" parent="MarginContainer/FullMenuVBox/SettingsMargin/Settings Section"]
layout_mode = 2
text = "Back"

[node name="Spacer" type="Control" parent="MarginContainer/FullMenuVBox"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Main Section" type="VBoxContainer" parent="MarginContainer/FullMenuVBox"]
layout_mode = 2
size_flags_horizontal = 8

[node name="PlayButton" type="Button" parent="MarginContainer/FullMenuVBox/Main Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Begin Balancing"

[node name="SettingsButton" type="Button" parent="MarginContainer/FullMenuVBox/Main Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/FullMenuVBox/Main Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 302.0
offset_top = 26.0
offset_right = 838.0
offset_bottom = 158.0
rotation = 0.817107
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0.612122, 0.199219, 1)
theme_override_colors/font_outline_color = Color(1, 0.612122, 0.199219, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 96
text = "Scale Game"

[connection signal="pressed" from="MarginContainer/FullMenuVBox/Main Section/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/FullMenuVBox/Main Section/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/FullMenuVBox/Main Section/QuitButton" to="." method="_on_quit_button_pressed"]
